--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,5 +20,6 @@ async-std = { version = "1.7.0", features = ["attributes"] }
 tide = "0.15.0"
 chrono = "0.4.19"
 html-index = "0.3.4"
+structopt = "0.3.20"
 
 [dev-dependencies]
